--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
 			<div class="container">
 				<div class="company-name">
 					<a href="{{ site.baseurl }}/">
-						Coding Sprint
+						SNTS Coding Sprint 2017
 					</a>
 				</div>
 				{% include navigation.html %}
